--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.6",
+    "drizzle-orm": "^0.45.1",
     "hono": "^4.11.4",
+    "mysql2": "^3.16.1",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.31.8",
+    "tsx": "^4.21.0"
   }
 }
